--- a/main.scss
+++ b/main.scss
@@ -10,8 +10,10 @@ $carbon--theme: $carbon--theme--g10;
 @import './page-styles/index';
 
 // components
+@import './components/ProgressBar/progress-bar';
 @import './components/ControlContainer/control-container';
 @import './components/Header/header';
+@import './components/Features/features';
 @import './components/OutputContainer/output-container';
 @import './components/ServiceContainer/service-container';
 @import './components/Toast/toast';
