chore: Update UI with feedback
Related to https://github.ibm.com/Watson/developer-experience/issues/7820

--- a/src/components/ControlContainer/_control-container.scss
+++ b/src/components/ControlContainer/_control-container.scss
@@ -16,6 +16,14 @@
     max-width: 60rem;
   }
 
+  .input-switch {
+    padding-bottom: $spacing-09;
+
+    &__type {
+      max-width: 10rem;
+    }
+  }
+
   .container-title {
     padding-bottom: $spacing-09;
   }
