--- a/src/components/OutputContainer/_output-container.scss
+++ b/src/components/OutputContainer/_output-container.scss
@@ -12,6 +12,14 @@
     max-width: 60rem;
   }
 
+  .output-switch {
+    padding-bottom: $spacing-09;
+
+    &__type {
+      max-width: 10rem;
+    }
+  }
+
   .container-title {
     padding-bottom: $spacing-09;
   }
