--- a/src/components/ControlContainer/_overrides.scss
+++ b/src/components/ControlContainer/_overrides.scss
@@ -17,3 +17,7 @@ div.bx--dropdown.bx--list-box {
 .bx--text-area__wrapper {
   width: 100%;
 }
+
+.bx--content-switcher-btn {
+  background-color: $ui-background;
+}
