--- a/src/components/OutputContainer/_output-container.scss
+++ b/src/components/OutputContainer/_output-container.scss
@@ -12,15 +12,19 @@
     max-width: 60rem;
   }
 
-  .output-switch {
-    padding-bottom: $spacing-09;
-
-    &__type {
-      max-width: 10rem;
-    }
-  }
-
-  .container-title {
+  &__control-panel {
     padding-bottom: $spacing-09;
   }
+
+  &__content-switch {
+    max-width: 10rem;
+  }
+
+  &__title {
+    padding-bottom: $spacing-09;
+  }
+}
+
+.pretty-json-container {
+  padding: $spacing-03;
 }
