fix:Address feedback from Mike
Related to https://github.ibm.com/Watson/developer-experience/issues/7963#issuecomment-17143597

--- a/src/components/ControlContainer/_overrides.scss
+++ b/src/components/ControlContainer/_overrides.scss
@@ -12,6 +12,7 @@ div.bx--dropdown.bx--list-box {
   max-width: 100%;
   min-width: 100%;
   width: 100%;
+  padding-bottom: $spacing-03;
 }
 
 .bx--text-area__wrapper {
