--- a/src/components/ControlContainer/_control-container.scss
+++ b/src/components/ControlContainer/_control-container.scss
@@ -1,19 +1,17 @@
 @import './overrides.scss';
 
 .control-container {
-
   display: flex;
   flex-direction: column;
   margin-bottom: $spacing-07;
-  max-width: 45rem;
   padding: $spacing-08;
   padding-bottom: $spacing-07 * 2;
   width: 100%;
+  height: 100%;
 
   @media (min-width: 1200px) {
     flex: 1 1 auto;
     margin-bottom: 0;
-    max-width: 60rem;
   }
 
   &__title {
