Improve the performance compilation from: [client] webpack compiled successfully in 78253 ms (around) to [client] webpack compiled successfully in 523 ms (around) for every change un html or scss

--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -1,3 +1,11 @@
+// Set theme
+@import '~@carbon/themes/scss/themes';
+$carbon--theme: $carbon--theme--g10;
+@include carbon--theme();
+
+// All Carbon styles vendor
+@import '~carbon-components/scss/globals/scss/styles.scss';
+
 html {
   height: 100%;
 
