fix: update dependencies, migrate carbon-react-components to @carbon/react

--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -1,8 +1,12 @@
+@use '@carbon/react/scss/theme' as *;
+
 html {
   height: 100%;
+  background: $background;
 
   body {
     height: 100%;
+    background: inherit;
 
     #__next {
       height: 100%;
